<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CAPUBBS" android:id="@+id/registerpage"
    >

<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" >
    
    <EditText
        android:id="@+id/regisuser" android:hint="@string/username"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:singleLine="true"
        android:maxLength="15"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/regisuserhint" android:layout_below="@+id/regisuser"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:paddingLeft="10dp" 
        android:textColor="#FF00008B" android:text="@string/regisuserhint"
        android:layout_height="wrap_content"
        />
    
    <EditText
        android:id="@+id/regispsd" android:hint="@string/password"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:inputType="textPassword"
        android:layout_height="wrap_content" android:layout_below="@+id/regisuserhint" />
    
    <EditText
        android:id="@+id/regispsd2" android:hint="@string/password2"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:inputType="textPassword"
        android:layout_height="wrap_content" android:layout_below="@+id/regispsd" />
    
    <EditText
        android:id="@+id/code" android:hint="@string/code"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:singleLine="true"
        android:layout_height="wrap_content" android:layout_below="@+id/regispsd2" />
    
    <RadioGroup android:id="@+id/sex" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_below="@+id/code" android:paddingTop="10dp"
        >
        <RadioButton android:id="@+id/male" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="16sp"
            android:text="@string/male"
            />
        <RadioButton android:id="@+id/female" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="16sp"
            android:text="@string/female"
            />
    </RadioGroup>
    
    <EditText
        android:id="@+id/qq" android:hint="@string/qq"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:layout_below="@+id/sex"
        android:layout_height="wrap_content" android:inputType="number"
        />
    
    <EditText
        android:id="@+id/email" android:hint="@string/email"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:layout_below="@+id/qq"
        android:layout_height="wrap_content" android:inputType="textEmailAddress"
        />
    
    <EditText
        android:id="@+id/from" android:hint="@string/from" android:singleLine="true"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:layout_below="@+id/email"
        android:layout_height="wrap_content"
        />
    
    <EditText
        android:id="@+id/intro" android:paddingTop="10dp"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:lines="3" android:gravity="left|top" android:maxLength="100"
        android:inputType="textMultiLine" android:hint="@string/intro"
        android:layout_height="wrap_content" android:layout_below="@+id/from" />     

    <EditText
        android:id="@+id/sig" android:paddingTop="10dp" android:maxLength="100"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:lines="3" android:gravity="left|top"
        android:inputType="textMultiLine" android:hint="@string/sig"
        android:layout_height="wrap_content" android:layout_below="@+id/intro" />
        
    <LinearLayout android:layout_centerHorizontal="true" android:layout_below="@+id/sig"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        >
        <Button 
            android:id="@+id/regissubmit" android:text="@string/register"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="12sp" android:onClick="regisPost"
        />
    </LinearLayout>
    
</RelativeLayout>

</ScrollView>