<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
        -->
    
    <item
        android:id="@+id/previous"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/previous"/>

    <item
        android:id="@+id/next"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/next"/>
    
    <item
        android:id="@+id/post"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/post"/>
    
    <item
        android:id="@+id/reply"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reply"/>
    
</menu>
