<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CAPUBBS" android:id="@+id/postpage"
    >


<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" >
    
    <EditText
        android:id="@+id/retitle" android:singleLine="true" android:maxLength="40"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:hint="@string/titlehint"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/retext" android:paddingTop="10dp"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:lines="15" android:gravity="left|top"
        android:inputType="textMultiLine" android:hint="@string/hinttext"
        android:layout_height="wrap_content" android:layout_below="@+id/retitle" />
    <Button
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:onClick="addImage"
        android:layout_below="@+id/retext" android:textSize="12sp"
        android:text="@string/picture" />
    <Button
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" android:onClick="addURL"
        android:layout_below="@+id/retext" android:textSize="12sp"
        android:text="@string/url" />
    
    <LinearLayout android:orientation="horizontal" android:id="@+id/postsig"
        android:layout_below="@+id/picture" android:paddingTop="10dp"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        >
        <TextView android:layout_width="wrap_content" android:textSize="14sp"
            android:layout_height="wrap_content" android:text="@string/postsig"/>
    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal"
        >
        <RadioButton android:id="@+id/sig1" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="14sp"
            android:text="@string/sig1" android:checked="true"
            />
        <RadioButton android:id="@+id/sig2" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="14sp"
            android:text="@string/sig2"
            />
        <RadioButton android:id="@+id/sig3" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="14sp"
            android:text="@string/sig3"
            />
        <RadioButton android:id="@+id/sig0" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="16sp"
            android:text="@string/sig0"
            />
    </RadioGroup>
    </LinearLayout>
    <LinearLayout android:layout_centerHorizontal="true"
        android:layout_below="@+id/postsig" android:paddingTop="12dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        >
        <Button 
            android:id="@+id/submit" android:text=""
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="12sp" android:onClick="sendPost"
        />
    </LinearLayout>

</RelativeLayout>
</ScrollView>