<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:id="@+id/activitycapubbs"
    tools:context=".CAPUBBS">
    
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome" />
    <EditText
        android:id="@+id/username" android:hint="@string/username"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:maxLength="15" android:singleLine="true"
        android:layout_height="wrap_content" android:layout_below="@+id/welcome" />
    <EditText
        android:id="@+id/password" android:hint="@string/password"
        android:layout_width="fill_parent" android:textSize="16sp"
        android:paddingTop="10dp" android:inputType="textPassword"
        android:layout_height="wrap_content" android:layout_below="@+id/username" />
    <LinearLayout android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarStyle"
        android:layout_below="@+id/password" android:id="@+id/button"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        >
        <Button 
            android:id="@+id/login" android:text="@string/login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="12sp" android:onClick="login"
        />
        <Button 
            android:id="@+id/register" android:text="@string/register"
            android:textSize="12sp" android:onClick="register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
        />
        <Button 
            android:id="@+id/main" android:text="@string/main"
            android:textSize="12sp" android:onClick="mainPage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
        />
    </LinearLayout>
    
    <LinearLayout android:orientation="vertical" android:id="@+id/mainpage"
        android:layout_width="fill_parent" android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" android:layout_below="@+id/button"
        android:paddingTop="15dp"
        >
    </LinearLayout>
       
    <!-- 
    <EditText 
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:hint=""
        />
    -->
</RelativeLayout>
